# dsvdc

./: AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
netatmo/: Makefile.am  configuration.c  main.c  netatmo.h  network.c  vdsd.c
src/: vdc-netatmo.c
